# genie-forge

./: .genie-forge.json  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements-docs.txt  requirements.txt
.github/workflows/: docs.yml  push.yml  release.yml
conf/environments/: dev.yaml  prod.yaml
conf/spaces/: employee_analytics.yaml  gf_test_full_space.yaml  sales_analytics.yaml  sample_complete_space.yaml  simple_space.yaml
conf/spaces/reference/: brij_space.yaml
docs/: index.md
docs/development/: GENIE_FORGE_FIXES_V2_LOG.md  GENIE_FORGE_FULL_TESTING_LOG.md  GENIE_FORGE_TESTING_LOG.md  README.md  TEST_GAP_ANALYSIS.md
docs/guide/: cli.md  configuration.md  getting-started.md  installation.md  troubleshooting.md  user-journeys.md
docs/includes/: abbreviations.md
docs/javascripts/: extra.js  mermaid.js
docs/reference/: api.md  architecture.md
docs/stylesheets/: extra.css
docs/tutorials/: 00-setup.md  01-core-workflow.md  02-space-operations.md  03-state-management.md  04-migration.md  05-advanced.md  cli-playground.md  notebooks-overview.md
exported_spaces/: brij_imported.yaml  gf_test_full_space.yaml
notebooks/: 00_Setup_Prerequisites.py  01_Core_Workflow.py  02_Space_Operations.py  03_State_Management.py  04_Cross_Workspace_Migration.py  05_Advanced_Patterns.py
src/genie_forge/: __about__.py  __init__.py  __main__.py  auth.py  client.py  demo_tables.py  models.py  parsers.py  serializer.py  state.py  utils.py
src/genie_forge/cli/: __init__.py  common.py  demo.py  find.py  import_cmd.py  init.py  profiles.py  space_cmd.py  spaces.py  state_cmd.py  validate.py  whoami.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  conftest.py  test_auth_integration.py  test_client_integration.py
tests/unit/: __init__.py  test_antipatterns.py  test_api_compliance.py  test_auth.py  test_cli.py  test_client.py  test_client_http_errors.py  test_common.py  test_concurrency_stress.py  test_demo_tables.py  test_edge_cases.py  test_impossible_scenarios.py  test_models.py  test_new_commands.py  test_notebooks.py  test_parsers.py  test_security.py  test_serializer.py  test_space_cmd.py  test_state.py  test_state_cmd.py  test_utils.py
(+6 files in other folders)
